Kubernetes/apps/prod/sinless-games/mesh/ingress-rancher.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rancher
  namespace: sinless-games
  annotations:
    kubernetes.io/ingress.class: istio
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Platform
    gethomepage.dev/name: Rancher
    gethomepage.dev/icon: rancher.png
    gethomepage.dev/description: Cluster manager
    gethomepage.dev/href: https://rancher.sinlessgames.com
spec:
  ingressClassName: istio
  rules:
    - host: rancher.sinlessgames.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rancher
                port:
                  number: 80
